--- a/app/views/bootstrap/sickbeard.last.twig
+++ b/app/views/bootstrap/sickbeard.last.twig
@@ -8,7 +8,7 @@
 <div class="row">
 {% for show in data %}
 	<div class="col-lg-6">
-		<a href="{{ url('list', {'provider': focus, 'func': 'episode'}) }}?id={{ show.id }}" style="position:relative;">
+		<a href="{{ url('list', {'provider': focus, 'func': 'show'}) }}?id={{ show._id }}" style="position:relative;">
 			<img src="{{ app.request.basepath }}/assets/sickbeard/banner.{{ show._id }}.jpg" class="img-responsive" />
 			<div style="position:relative; bottom:22px; line-height:22px; background-color:black; opacity:0.8; text-align:left; padding: 0px 10px; color:white;">{{ show.showname ~ ' ' ~ show.season ~ 'x' ~ show.episode }}</div>
 		</a>
