--- a/app/views/bootstrap/index.twig
+++ b/app/views/bootstrap/index.twig
@@ -2,6 +2,15 @@
 
 {%  block content %}
 
-todo
+<div class="container">
+
+<div class="page-header" id="banner"></div>
+
+<div class="row">
+<div class="col-lg-12">
+<img src="http://www.pratikable.com/wp-content/uploads/2014/05/welcome.jpg" alt="WELCOME"/>
+</div>
+</div>
+</div>
 
 {% endblock %}
