--- a/app/views/bootstrap/index.twig
+++ b/app/views/bootstrap/index.twig
@@ -8,7 +8,7 @@
 
 <div class="row">
 <div class="col-lg-12">
-<img src="http://www.pratikable.com/wp-content/uploads/2014/05/welcome.jpg" alt="WELCOME"/>
+<img src="http://www.pratikable.com/wp-content/uploads/2014/05/welcome.jpg" alt="WELCOME" class="img-responsive"/>
 </div>
 </div>
 </div>
