--- a/app/views/bootstrap/layout.login.twig
+++ b/app/views/bootstrap/layout.login.twig
@@ -3,7 +3,7 @@
 <head>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta charset="utf-8" />
-	<title>{{ app.translator.trans('site.title') }}</title>
+	<title>{{ conf['site']['title'] }}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
