--- a/app/views/bootstrap/layout.twig
+++ b/app/views/bootstrap/layout.twig
@@ -32,6 +32,10 @@
 	a.glyphicon:hover { text-decoration:none; }
 	img.lazy { width:100px; height:133px; }
 	.glyphicon { font-size:2em; top:0px; }
+	tr:target { background-color:#ddd; }
+	.row:target { padding-top:60px; }
+	.widget_index { padding:0 5px; }
+	.widget_index img { height:150px; max-width:100%; margin:0px; }
 	</style>
 </head>
 <body>
