--- a/app/views/bootstrap/index.twig
+++ b/app/views/bootstrap/index.twig
@@ -11,7 +11,7 @@
 <div class="row">
 	{% for data in widget.widget %}
 	<div class="col-lg-1 col-md-2 col-sm-3 col-xs-4 widget_index">
-		<a href="{{ data.link }}#{{ data.id }}"><img src="{{ data.img }}" alt="{{ data.title }}" class="img-responsive" /></a>
+		<a href="{{ data.link }}#{{ data.id }}"><img src="{{ data.img }}" alt="{{ data.title }}" class="img-responsive" title="{{ data.title }}" /></a>
 	</div>
 	{% endfor %}
 </div>
