--- a/app/views/bootstrap/index.twig
+++ b/app/views/bootstrap/index.twig
@@ -3,8 +3,9 @@
 {%  block content %}
 
 <div class="container widgets">
-
 <div class="page-header" id="banner"></div>
+<h2>{{ app.translator.trans('site.last') }}</h2>
+<hr />
 
 {% for widget in widgets %}
 <h2>{{ widget.name }}</h2>
