--- a/app/views/bootstrap/layout.twig
+++ b/app/views/bootstrap/layout.twig
@@ -36,6 +36,7 @@
 	.row:target { padding-top:60px; }
 	.widget_index { padding:0 5px; }
 	.widget_index img { height:150px; max-width:100%; margin:0px; }
+	p[class*='bg-'] { padding:15px; }
 	</style>
 </head>
 <body>
