--- a/app/views/bootstrap/layout.twig
+++ b/app/views/bootstrap/layout.twig
@@ -24,6 +24,7 @@
 	});
 	</script>
 	<style>
+	body { margin-top:70px; }
 	h2 { margin-top:0px; }
 	p { text-align:justify; }
 	.row { margin:0px 0px 20px;padding:5px; }
@@ -31,9 +32,8 @@
 	.bs-glyphicons .glyphicon { display: inline-block; margin:5px; font-size: 25px; }
 	a.glyphicon:hover { text-decoration:none; }
 	img.lazy { width:100px; height:133px; }
-	.glyphicon { font-size:2em; top:0px; }
+	.filter_list .glyphicon { font-size:2em; top:0px; }
 	tr:target { background-color:#ddd; }
-	.row:target { padding-top:60px; }
 	.widget_index { padding:0 5px; }
 	.widget_index img { height:150px; max-width:100%; margin:0px; }
 	p[class*='bg-'] { padding:15px; }
