--- a/app/views/bootstrap/admin.layout.twig
+++ b/app/views/bootstrap/admin.layout.twig
@@ -7,9 +7,8 @@
 		<ul class="nav nav-pills nav-stacked">
 			<li{% if adminfocus == 'dashboard' %} class="active"{% endif %}><a href="{{ url('admindashboard') }}">Dashboard</a></li>
 			<li{% if adminfocus == 'users' %} class="active"{% endif %}><a href="{{ url('adminusers') }}">Users</a></li>
-			<li{% if adminfocus == 'newsletter' %} class="active"{% endif %}><a href="{{ url('adminnewsletter') }}">Newsletter</a></li>
-			<li{% if adminfocus == 'configurator' %} class="active"{% endif %}><a href="{{ url('adminconfigurator') }}">Configurator</a></li>
 			<li{% if adminfocus == 'configuration' %} class="active"{% endif %}><a href="{{ url('adminconfiguration') }}">Configuration</a></li>
+			<li{% if adminfocus == 'logout' %} class="active"{% endif %}><a href="{{ url('logout') }}">Logout</a></li>
 		</ul>
 	</div>
 	<div class="col-lg-11">
